# InductorProlog

./: UnsupportedProlog.md  UsingIndProlog.md  backlog.md  gettingstarted.md  readme.md
Examples/: Adventure.pl  AdventureGameV1.0.pl  AdventureGameV1.0.pl~  HelloWorld.pl  HelloWorld.prolog  adventuregamev1.1.pl
src/: CMakeLists.txt  TestsMain.cpp  main.cpp
src/FXPlatform/: CMakeLists.txt  NanoTrace.cpp  NanoTrace.h  SystemTraceType.h  Utilities.cpp  Utilities.h
src/FXPlatform/Parser/: CMakeLists.txt  Compiler.h  Parser.h
src/FXPlatform/Prolog/: CMakeLists.txt  HtnArithmeticOperators.cpp  HtnGoalResolver.cpp  HtnGoalResolver.h  HtnRule.cpp  HtnRuleSet.cpp  HtnRuleSet.h  HtnTerm.cpp  HtnTerm.h  HtnTermFactory.cpp  HtnTermFactory.h  PrologCompiler.cpp  PrologCompiler.h  PrologParser.cpp  PrologParser.h  PrologQueryCompiler.cpp  PrologQueryCompiler.h
src/FXPlatform/iOS/: CMakeLists.txt
src/Tests/: CMakeLists.txt  HtnGoalResolverTests.cpp  HtnRuleSetTests.cpp  ParserTestBase.h  PrologCompilerTests.cpp
src/UnitTest++/: AssertException.cpp  AssertException.h  CMakeLists.txt
src/UnitTest++/Posix/: CMakeLists.txt
src/UnitTest++/Win32/: CMakeLists.txt
